# entropic

./: .env.development  .env.example  .gitignore  DEVELOPMENT.md  DISTRIBUTE.md  LICENSE  README.md  SETUP.md  TODO.md  TRADEMARKS.md  package-lock.json  package.json  pnpm-lock.yaml
.github/: actionlint.yaml
.github/workflows/: publish-runtime.yml  release-linux.yml  release-sandbox.yml  release-windows.yml  release.yml
docs/: OPEN_SOURCE_CHECKLIST.md  TASK_BOARD_SYSTEM_ROADMAP.md  X-INTEGRATION-STATUS.md
openclaw-runtime/: Dockerfile  entrypoint.sh
openclaw-runtime/browser-service/: server.mjs
release-notes/: v0.1.13.md
scripts/: build-for-user-test-windows.ps1  build-for-user-test.sh  build-openclaw-runtime.sh  bundle-runtime-image.sh  clean-for-user-test.sh  dev-runtime.sh  prepare-windows-release-resources.ps1  register-dev-protocol.sh  run-openclaw-runtime.sh  run-windows-wsl-app.ps1  runtime-common.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.dev.json  tauri.conf.json  tauri.conf.windows-user-test.json
src-tauri/src/: commands.rs  lib.rs  runtime.rs  windows_runtime_manager.rs
src/components/: AgentAvatar.tsx  Billing.tsx  ChannelSetupModal.tsx  DevScreenPreview.tsx  Layout.tsx  MarkdownContent.tsx  ModelSelector.tsx  SandboxStartupOverlay.tsx  ScanResultModal.tsx  StartupUseCaseCard.tsx  SuggestionChip.tsx  TelegramSetupModal.tsx
src/contexts/: AuthContext.tsx
src/desktop/contextMenus/: DesktopContextMenus.tsx
src/desktop/finder/: CreateWorkspaceEntryModal.tsx  FilePreviewWindow.tsx
src/desktop/voice/: VoiceOverlay.tsx  VoiceProvider.tsx
src/lib/: auth.ts  chatMessageUtils.ts  clientLog.ts  gateway-status.ts  gateway.ts  integrations.ts  localCredits.ts  nativeApi.ts  profile.ts  settingsStore.ts  settingsWarmState.ts  startupUseCases.ts  taskBoard.ts  updater.ts  vault.ts
src/pages/: BillingPage.tsx  Channels.tsx  Chat.tsx  Dashboard.tsx  Files.tsx  Jobs.tsx  Onboarding.tsx  Settings.tsx  SetupScreen.tsx  SignIn.tsx  Store.tsx  Tasks.tsx
