[package]
name = "entropic"
version = "0.1.8"
description = "OpenClaw Desktop - AI assistant with secure sandboxing"
authors = ["OpenClaw Team"]
edition = "2021"

[lib]
name = "entropic_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "unstable"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2.10"
tauri-plugin-stronghold = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
dirs = "5"
which = "6"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
url = "2"
futures-util = "0.3"
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
http = "1"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
